
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_interface", "ros_package")

package(default_visibility = ["//visibility:public"])

# Messages

ros_interface(
    name = "msg__TFMessage",
    src = "msg/TFMessage.msg",
    deps = [
        "@geometry_msgs//:msg__TransformStamped",
    ],
)

ros_interface(
    name = "msg__TF2Error",
    src = "msg/TF2Error.msg",
)

# Services

ros_interface(
    name = "srv__FrameGraph",
    src = "srv/FrameGraph.srv",
    deps = [
        # Required for all services
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

# Actions

ros_interface(
    name = "action__LookupTransform",
    src = "action/LookupTransform.action",
    deps = [
        # Required for all actions
        "@action_msgs//:msg__GoalInfo",
        "@action_msgs//:msg__GoalStatus",
        "@action_msgs//:msg__GoalStatusArray",
        "@action_msgs//:srv__CancelGoal",
        # Specific to this action
        "@builtin_interfaces//:msg__Duration",
        "@builtin_interfaces//:msg__Time",
        "@geometry_msgs//:msg__TransformStamped",
        ":msg__TF2Error"
    ]
)
