
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_interface")

package(default_visibility = ["//visibility:public"])

# Interfaces

ros_interface(
    name = "msg__Field",
    src = "msg/Field.msg",
    deps = [
        ":msg__FieldType",
    ],
)

ros_interface(
    name = "msg__FieldType",
    src = "msg/FieldType.msg",
)

ros_interface(
    name = "srv__GetTypeDescription",
    src = "srv/GetTypeDescription.srv",
    deps = [        
        ":msg__KeyValue",
        ":msg__TypeDescription",
        ":msg__TypeSource",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "msg__IndividualTypeDescription",
    src = "msg/IndividualTypeDescription.msg",
    deps = [
        ":msg__Field",
    ],
)

ros_interface(
    name = "msg__KeyValue",
    src = "msg/KeyValue.msg",
)

ros_interface(
    name = "msg__TypeDescription",
    src = "msg/TypeDescription.msg",
    deps = [
        ":msg__IndividualTypeDescription",
    ],
)

ros_interface(
    name = "msg__TypeSource",
    src = "msg/TypeSource.msg",
)
